# Olympus

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
references/design-inspirations/: 2026-04-26-zenith-dashboard-reference.md  README.md
scripts/: create-obsidian-map.ps1  create-olympus-vault.ps1  implement-codex-second-brain.ps1  scaffold-olympus-codex-project.ps1  update-olympus-vault-sync.ps1  update-vault-dashboard-cleanup.ps1  update-vault-interface-refinement.ps1  update-vault-maintenance-protocol.ps1
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: attachments.rs  markets.rs  mod.rs  pantheon.rs  projects.rs  tasks.rs  weather.rs
src/components/panels/: ActionQueuePanel.tsx  AmbientDock.tsx  ChatPanel.tsx  HeaderBar.tsx  LibraryPanel.tsx  MarketsPanel.tsx  NowPlayingPanel.tsx  ProjectsPanel.tsx  QuickbarPanel.tsx  ToolBelt.tsx  WeatherPanel.tsx
src/data/: seed.ts
src/hooks/: useActionQueue.ts  useDashboardData.ts  usePantheon.ts
src/services/: launcher.ts  liveData.ts  obsidian.ts  pantheonAnalysis.ts  pantheonChat.ts  research.ts  storage.ts  tauri.ts
src/types/: dashboard.ts  markets.ts  weather.ts
src/utils/: formatPath.ts
