[package]
name = "project-olympus"
version = "0.1.0"
description = "Local-first AI command station for projects, research, workflows, and Obsidian-backed memory."
authors = ["Project Olympus"]
edition = "2021"

[lib]
name = "project_olympus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
once_cell = "1"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
dotenvy = "0.15"
urlencoding = "2"
walkdir = "2"
